[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy>=1.10.0",
    "pybind11>=2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mepylome"
version = "0.8.8"
description = "Python package for processing Infinum DNA methylation arrays"
readme = "README.md"
authors = [
    { name = "Jon Brugger" }
]
license = { text = "MIT license" }
keywords = ["Illumina", "Methylation", "Infinum", "Microarray", "BeadChip"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
requires-python = ">=3.8"
dependencies = [
    "dash>=2.16.0",
    "dash_bootstrap_components",
    "importlib_resources; python_version < '3.9'",
    "numpy",
    "odfpy",
    "openpyxl",
    "pandas",
    "plotly<6.0.0",
    "psutil",
    "pyranges<0.1.3",
    "scikit-learn",
    "tqdm",
    "toml",
    "umap-learn",
    "xlrd",
    "xxhash"
]

[project.urls]
Homepage = "https://github.com/brj0/mepylome"

[tool.setuptools]
packages = ["mepylome"]
include-package-data = true

[project.scripts]
mepylome = "mepylome.cli:start_mepylome"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle - missing docstring
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pandas-vet
    "PD",
    # Pylint
    "PL",
    # Trailing whitespace
    "W",
]
ignore = [
    # Relax the convention by _not_ requiring documentation for every function
    # parameter.
    "D417",
    # Missing docstring in `__init__`
    "D107",
    # Missing docstring in public method
    "D102",
    # Missing docstring in magic method
    "D105",
    # Use `.to_numpy()` instead of `.values`
    "PD011",
    # Annotation
    "ANN",
    # `print` found
    "T201",
    # Trailing comma missing
    "COM812",
    # Magic value used in comparison
    "PLR2004",
    # Too many return statements
    "PLR0911",
    # Use a context manager for opening files
    "SIM115",
    # Too many arguments in function definition
    "PLR0913",
    # Too many statements
    "PLR0915",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
